<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.mobileapp.activities.LoginActivity">

<LinearLayout
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="171dp"
        android:layout_height="166dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-10pt"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12pt"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_email"
            android:contentDescription="@android:string/defaultVoiceMailAlphaTag" />

        <EditText
            android:id="@+id/emailTb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColorLink="#00FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="38dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_lock"
            android:contentDescription="@string/ic_lock" />

        <EditText
            android:id="@+id/passwordTb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="10dp"

        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:radius="6dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_login"

            android:gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="register"
        android:text="@string/register_now"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_you_agree_with_our"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="5dp"
            android:text="@string/terms_amp_conditions"
            android:textColor="#000000"
            android:textColorLink="#000000"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
</LinearLayout>