<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="128dp"
            android:layout_marginStart="63pt"

            android:layout_marginTop="-10pt"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="119pt"
            android:layout_height="24pt"
            android:layout_marginStart="38pt"
            android:layout_marginTop="40pt"
            android:fontFamily="serif-monospace"
            android:gravity="top"
            android:text="@string/big_burger_registration"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="10pt"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/emailRegistration"
                android:layout_width="160pt"
                android:layout_height="30pt"
                android:layout_marginStart="15pt"
                android:layout_marginTop="80pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/passwordRegistration"
                android:layout_width="160pt"
                android:layout_height="30pt"
                android:layout_marginStart="15pt"
                android:layout_marginTop="120pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/streetRegistration"
                android:layout_width="160pt"
                android:layout_height="30pt"
                android:layout_marginStart="15pt"
                android:layout_marginTop="160pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/streetRegistration"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/houseRegistration"
                android:layout_width="75pt"
                android:layout_height="30pt"
                android:layout_marginStart="15pt"
                android:layout_marginTop="200pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/houseRegistration"
                android:inputType="number"
                android:paddingStart="10dp"


                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/flatRegistration"
                android:layout_width="80pt"
                android:layout_height="30pt"
                android:layout_marginStart="95pt"
                android:layout_marginTop="200pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/flatRegistration"
                android:inputType="number"

                android:paddingStart="10dp"


                android:textColorLink="#00FFFFFF" />


            <EditText
                android:id="@+id/postalCodeRegistration"
                android:layout_width="60pt"
                android:layout_height="30pt"

                android:layout_marginStart="15pt"
                android:layout_marginTop="240pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/postalCodeRegistration"
                android:inputType="textPostalAddress"
                android:paddingStart="10dp"
                android:textColorLink="#00FFFFFF" />

            <EditText
                android:id="@+id/cityRegistration"
                android:layout_width="95pt"
                android:layout_height="30pt"
                android:layout_marginStart="80pt"
                android:layout_marginTop="240pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:hint="@string/CityRegistration"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorLink="#00FFFFFF" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="130pt"
                android:layout_height="28pt"
                android:layout_marginStart="28pt"
                android:layout_marginTop="280pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:background="@drawable/shape_login"

                android:gravity="center"
                android:text="@string/register_now"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="76dp"
                android:layout_height="71dp"
                android:layout_marginStart="80pt"
                android:layout_marginTop="320pt"
                android:layout_marginEnd="15pt"
                android:layout_marginBottom="60pt"
                android:visibility="invisible" />

            <Button
                android:id="@+id/backToLoginButton"
                android:layout_width="113dp"
                android:layout_height="38dp"
                android:layout_marginStart="2pt"
                android:layout_marginTop="2pt"
                android:layout_marginEnd="2pt"
                android:background="@drawable/shape_login"
                android:text="Back To Login "
                android:textColor="#FFFFFF"
                android:textSize="12sp" />


        </FrameLayout>

    </RelativeLayout>

</LinearLayout>


